# table-led

./: .env  Cargo.toml
firmware/esp32/: Cargo.toml  README.md  build.rs
firmware/esp32/.cargo/: config.toml
firmware/esp32/src/: auth.rs  dispalays_controller.rs  dispaly.rs  http_client.rs  input.rs  main.rs  models.rs  net.rs  storage.rs  websocket.rs  wifi.rs  ws.rs
firmware/esp32/tests/: auth.rs  display.rs  models.rs  net.rs
server/: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env
server/migrations/: 01_create_tables.sql
server/src/: auth.rs  handlers.rs  main.rs  models.rs  ws.rs
server/tests/: integrations_tests.rs
