[package]
name = "scoreboard-server"
version = "0.1.0"
edition = "2025"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
jsonwebtoken = "9"
futures-util = "0.3"

